Removed add_sibling, fixed table layout bugs
add_sibling() and with_sibling() are removed, because they are very
hard to reason about, since they act like an add_child() on the parent,
which is simply weird in practice, since you wouldn't expect a top-down
tree to be able to affect its parent. This led to the current bugs in
the table_view.rs - which are now fixed, but add_sibling() has to go,
it's just too confusing.

This also means that the root node won't have the ability to have
siblings - however, this is simply worked around with a root DOM node
with children instead of one sibling.

This also removes the need to re-allocate the DOM in the UiDescription,
since we now know that the DOM returned by the user has exactly one
root component (because we disallowed siblings).

Other than that, the bubbling-to-the-parent function is now only run
once and is O(n) instead of O(n ^ 2).

--- a/examples/table.css
+++ b/examples/table.css
@@ -1,6 +1,9 @@
 .__azul-native-table-container {
     flex-direction: row;
-    background-color: white;
+}
+
+.__azul-native-table-column-container {
+    flex-direction: row;
 }
 
 .__azul-native-table-column {
@@ -8,35 +11,20 @@
     min-width: 50px;
 }
 
+.__azul-native-table-row-number-wrapper {
+    flex-direction: column;
+    width: 30px;
+}
+
 .__azul-native-table-column-name {
     height: 20px;
 }
 
-.__azul-native-table-row {
-    height: 10px;
+.__azul-native-table-rows {
+    flex-direction: column;
 }
 
 .__azul-native-table-cell {
     border: 1px solid grey;
+    height: 10px;
 }
-
-/*
-unused: __azul-native-table-top-left-rect;
-unused: __azul-native-table-row-numbers;
-unused: __azul-native-table-row-numbers;
-*/
-
-/*
-
-// div.__azul-native-table-container
-//     |-> div.__azul-native-table-column (Column 0)
-//         |-> div.__azul-native-table-top-left-rect .__azul-native-table-column-name
-//         '-> div.__azul-native-table-row-numbers .__azul-native-table-row
-//
-//     |-> div.__azul-native-table-column-container
-//         |-> div.__azul-native-table-column (Column 1 ...)
-//             |-> div.__azul-native-table-column-name
-//             '-> div.__azul-native-table-row
-//                 '-> div.__azul-native-table-cell
-
-*/
